feat: add endpoint for update saga and ptv3 url for each asset
